--- a/app/src/main/res/layout/item_list_device.xml
+++ b/app/src/main/res/layout/item_list_device.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp" >
@@ -11,39 +11,23 @@
         android:layout_gravity="center_vertical"
         android:src="@drawable/ic_bluetooth" />
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="10dp"
-        android:layout_weight="1"
-        android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/tv_itema_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="设备名"
-            android:textColor="@color/more_t1"
-            android:textSize="18sp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <TextView
-                android:id="@+id/tv_itema_addr"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2015-02-03 18：00"
-                android:textSize="12sp" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
+    <TextView
+        android:id="@+id/tv_itema_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical" >
-    </LinearLayout>
+        android:text="设备名"
+        android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@+id/iv_itema_img"
+        android:textColor="@color/more_t1"
+        android:textSize="18sp" />
+    <TextView
+        android:id="@+id/tv_itema_addr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2015-02-03 18：00"
+        android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@+id/iv_itema_img"
+        android:layout_below="@+id/tv_itema_name"
+        android:textSize="12sp" />
 
-</LinearLayout>
+</RelativeLayout>
