--- a/app/src/main/res/layout/item_list_device.xml
+++ b/app/src/main/res/layout/item_list_device.xml
@@ -30,4 +30,13 @@
         android:layout_below="@+id/tv_itema_name"
         android:textSize="12sp" />
 
+
+    <TextView
+        android:id="@+id/tvInfo"
+        android:text="@string/app_name"
+        android:layout_width="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
